--- a/.gitignore
+++ b/.gitignore
@@ -34,9 +34,12 @@
 /config/master.key
 
 /.idea/*
+
 _themes/DevBlog-Theme
-/app/assets/images/
+
+/app/assets/images
 !/app/assets/images/profile.png
+/app/assets/stylesheets/theme-1.css
 /app/assets/stylesheets/theme-2.css
 /app/assets/stylesheets/theme-3.css
 /app/assets/stylesheets/theme-4.css
@@ -46,5 +49,3 @@ _themes/DevBlog-Theme
 /app/assets/stylesheets/theme-8.css
 app/javascript/src/fontawesome/js
 app/stylesheets
-/app/javascript/src/bootstrap.min.js
-/app/javascript/src/popper.min.js
