--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,10 +3,8 @@ inherit_gem: { rubocop-rails-omakase: rubocop.yml }
 
 #plugins: rubocop-rspec
 
-# Overwrite or add rules to create your own house style
+#RSpec/MultipleExpectations:
+#  Max: 20
 #
-RSpec/MultipleExpectations:
-  Max: 20
-
-RSpec/ContextWording:
-  Enabled: false
+#RSpec/ContextWording:
+#  Enabled: false
