Updated `yourblog.com` to `your-domain.com`.

--- a/docs/deploy/blog_nginx_https.conf
+++ b/docs/deploy/blog_nginx_https.conf
@@ -2,7 +2,7 @@ server {
   listen 443 ssl;
   listen [::]:443 ssl;
   http2 on;
-  server_name yourblog.com; # Domain or IP
+  server_name your-domain.com; # Domain or IP
   root /srv/markdown-resume-blog/public; # I assume your app is located at that location
 
   ssl_certificate "/etc/nginx/ssl_key_cert/cert.pem";
@@ -35,19 +35,19 @@ server {
 }
 
 # Put these lines to the top of the file if you want to use them.
-# Redirect www.yourblog.com to yourblog.com.
+# Redirect www.your-domain.com to your-domain.com.
 # server {
 #   listen 80;
 #   listen [::]:80;
 #   listen 443 ssl;
 #   listen [::]:443 ssl;
 #
-#   server_name www.yourblog.com;
+#   server_name www.your-domain.com;
 #
 #   ssl_certificate "/etc/nginx/ssl_key_cert/cert.pem";
 #   ssl_certificate_key "/etc/nginx/ssl_key_cert/key.pem";
 #
-#   return 301 $scheme://yourblog.com$request_uri;
+#   return 301 $scheme://your-domain.com$request_uri;
 # }
 
 # Redirect "http://..." to "https://...."
@@ -55,9 +55,9 @@ server {
 # server {
 #   listen 80;
 #   listen [::]:80;
-#   server_name yourblog.com;
+#   server_name your-domain.com;
 #
 #   location / {
-#       return 301 https://yourblog.com$request_uri;
+#       return 301 https://your-domain.com$request_uri;
 #   }
 # }
