--- a/docs/deploy/blog_nginx.conf
+++ b/docs/deploy/blog_nginx.conf
@@ -5,7 +5,7 @@ upstream puma {
 server {
   listen 80;
   listen [::]:80;
-  server_name yourblog.com; # Domain or IP
+  server_name your-domain.com; # Domain or IP
   root /srv/markdown-resume-blog/public; # I assume your app is located at that location
 
   location ^~ /assets/ {
