Allowed user to install blog on an existing server. 80 port shared with multiple websites.

--- a/docs/deploy/blog_nginx.conf
+++ b/docs/deploy/blog_nginx.conf
@@ -1,11 +1,11 @@
-upstream puma {
+upstream blogup {
   server unix:///var/run/blog.sock;
 }
 
 server {
-  listen 80;
-  listen [::]:80;
-  server_name your-domain.com; # Domain or IP
+  listen 80; # Must be 80. Port 80 can be used for multiple websites on one machine.
+  listen [::]:80; # Must be 80.
+  server_name your-domain.com; # Change it to your domain or IP
   root /srv/markdown-resume-blog/public; # I assume your app is located at that location
 
   location ^~ /assets/ {
@@ -19,7 +19,7 @@ server {
   }
 
   location / {
-    proxy_pass http://puma; # Match the name of upstream directive which is defined above. Should not start with 'https://' since puma only understand http requests!
+    proxy_pass http://blogup; # Match the name of upstream directive which is defined above. Should not start with 'https://' since puma only understand http requests!
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
