--- a/docs/deploy/blog_nginx_https.conf
+++ b/docs/deploy/blog_nginx_https.conf
@@ -22,7 +22,7 @@ server {
   }
 
   location / {
-    proxy_pass http://puma; # Should not starts with 'https://' since puma only understand http requests!
+    proxy_pass http://blogup; # Should not starts with 'https://' since puma only understand http requests!
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
