--- a/docs/deploy/blog_nginx.conf
+++ b/docs/deploy/blog_nginx.conf
@@ -5,7 +5,9 @@ upstream blogup {
 server {
   listen 80; # Must be 80. Port 80 can be used for multiple websites on one machine.
   listen [::]:80; # Must be 80.
-  server_name your-domain.com; # Change it to your domain or IP
+  # If you want to bind multiple domain names, you can separate them with spaces. For example: your-domain-a.com your-domain-b.net;
+  # The ".dev" domain is a bit special because it requires the use of TLS. If you use CloudFlare's service, one solution is: `.dev domain -> SSL/TLS -> Edge Certificates -> Enable "Always Use HTTPS"`.
+  server_name your-domain.com;
   root /srv/developer-portfolio-engine/public; # I assume your app is located at that location
 
   location ^~ /assets/ {
