--- a/docs/deploy/blog_nginx.conf
+++ b/docs/deploy/blog_nginx.conf
@@ -7,9 +7,9 @@ server {
   listen [::]:80; # Must be 80.
   # If you want to bind multiple domain names, you can separate them with spaces. For example: your-domain-a.com your-domain-b.net;
   # The ".dev" domain is a bit special because it requires the use of TLS. If you use CloudFlare's service, one solution is: `<your-domain>.dev -> SSL/TLS -> Edge Certificates -> Enable "Always Use HTTPS"`.
-  # Because you may need to display your blog in multiple languages, blog content in different languages can be displayed through subdomains, so the wildcard "*" is used.
-  # If you are familiar with nginx configuration, you can also optimize this line and write the specific subdomain according to your needs without using the wildcard "*".
-  server_name your-domain.com *.your-domain.com;
+  # You may need to display your blog in multiple languages, blog content in different languages can be displayed through subdomains.
+  # In the "Create DNS A records" of "docs/deploy/deploy_on_CentOS10.md", if you have created other A records, you also need to add them to this line. For example, jp.your-domain.com
+  server_name your-domain.com www.your-domain.com;
   root /srv/developer-portfolio-engine/public; # I assume your app is located at that location
 
   location ^~ /assets/ {
