--- a/docs/deploy/blog_nginx_https.conf
+++ b/docs/deploy/blog_nginx_https.conf
@@ -2,7 +2,7 @@ server {
   listen 443 ssl;
   listen [::]:443 ssl;
   http2 on;
-  server_name your-domain.com; # Domain or IP
+  server_name your-domain.com www.your-domain.com; # Or more domains
   root /srv/developer-portfolio-engine/public; # I assume your app is located at that location
 
   ssl_certificate "/etc/nginx/ssl_key_cert/cert.pem";
@@ -34,8 +34,9 @@ server {
   gzip_min_length 3000;
 }
 
-# Put these lines to the top of the file if you want to use them.
 # Redirect www.your-domain.com to your-domain.com.
+# This can also be done by creating rules in Cloudflare.
+# Put these lines to the top of the file if you want to use them.
 # server {
 #   listen 80;
 #   listen [::]:80;
