Used subdirectory to switch languages instead of using subdomain to switch languages. Removed subdomain related code.

--- a/docs/deploy/blog_nginx.conf
+++ b/docs/deploy/blog_nginx.conf
@@ -6,11 +6,7 @@ server {
   listen 80; # Must be 80. Port 80 can be used for multiple websites on one machine.
   listen [::]:80; # Must be 80.
   # If you want to bind multiple domain names, you can separate them with spaces. For example: your-domain-a.com your-domain-b.net;
-  # The ".dev" domain is a bit special because it requires the use of TLS. If you use CloudFlare's service, one solution is: `<your-domain>.dev -> SSL/TLS -> Edge Certificates -> Enable "Always Use HTTPS"`.
-  # You may need to display your blog in multiple languages, blog content in different languages can be displayed through subdomains.
-  # This is easiest to do using the wildcard character "*", but it is not best practice and is not recommended.
-  # In the "Create DNS A records" of "docs/deploy/deploy_on_CentOS10.md", if you have created other A records, you also need to add them to this line. For example, jp.your-domain.com
-  server_name your-domain.com www.your-domain.com;
+  server_name your-domain.com;
   root /srv/developer-portfolio-engine/public; # I assume your app is located at that location
 
   location ^~ /assets/ {
