--- a/docs/deploy/blog_nginx_https.conf
+++ b/docs/deploy/blog_nginx_https.conf
@@ -2,8 +2,8 @@ server {
   listen 443 ssl;
   listen [::]:443 ssl;
   http2 on;
-  server_name your-domain.com www.your-domain.com; # Or more domains
-  root /srv/developer-portfolio-engine/public; # I assume your app is located at that location
+  server_name your-domain.com; # If you want to bind multiple domain names, you can separate them with spaces. For example: your-domain-a.com your-domain-b.net;
+  root /srv/developer-portfolio-engine/public; # I assume your app is located at this location
 
   ssl_certificate "/etc/nginx/ssl_key_cert/cert.pem";
   ssl_certificate_key "/etc/nginx/ssl_key_cert/key.pem";
