--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,9 @@ log/*.log
 tmp/
 coverage
 
+_themes/DevResume-Theme
+_themes/DevCard-Theme
+
 # Local configuration files
 config/credentials.yml.development
 .ruby-gemset
